<resources>
    <string name="app_name">Proyecto Primer Trimestre</string>
    <string name="tvBienvenido1">Bienvenido de nuevo</string>
    <string name="tvBienvenido2">Wikipeces-Iniciar sesión</string>
    <string name="username">Inserta tu nombre de usuario...</string>
    <string name="card_required">*</string>
    <string name="pass">Inserta tu contraseña...</string>
    <string name="loginbutton_text">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="inicio">Inicio</string>
    <string name="recomendadas1">Entradas recomendadas</string>
    <string name="recomendadas2">Estas son algunas entradas que podrían interesarte</string>
    <string name="description_user_photo">Foto del usuario</string>
    <string name="entrada_name">Nombre de entrada</string>
    <string name="entrada_habitat">Habita en...</string>
    <string name="user_name">Usuario</string>
    <string name="usuarios1">Cuentas recomendadas</string>
    <string name="usuarios2">Estas son algunas de las cuentas más activas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historial">Historial</string>
    <string name="opciones">Opciones</string>
    <string name="nombrentrada">Nombre de la entrada</string>
    <string name="creadapor">Entrada creada por</string>
    <string name="description_entry_photo">Foto de la entrada</string>
    <string name="historial1">¿Te has dejado algo por ver?</string>
    <string name="historial2">Estas son las últimas entradas que has consultado</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="usuarioWikipeces">Usuario de Wikipeces</string>
    <string name="perfil_username">Nombre de usuario</string>
    <string name="descripcion">Descripción</string>
    <string name="habitat">Hábitat</string>
    <string name="perfil">Perfil</string>
    <string name="ajuste1">Enviar datos de uso</string>
    <string name="ajuste2">Recibir notificaciones</string>
    <string name="ajuste3">Mostrar autor de entrada(no interactuable)</string>
    <string name="ajuste4">Activar modo ahorro de datos</string>
    <string name="ajuste5">Mostrar mi cuenta como pública</string>
    <string name="ajuste6">Detener la app en segundo plano</string>
    <string name="recordarcredenciales">Recordar mis credenciales</string>
    <string name="username1">FishEnjoyer24</string>
    <string name="username2">FanDLosPeces</string>
    <string name="username3">CirujanoFan</string>
    <string name="username4">RokuhiraChihiro</string>
</resources>