<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
        />
    
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="425dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="60dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvBienvenido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBienvenido1"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:textSize="32sp"
            />

            <TextView
                android:id="@+id/Bienvenido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBienvenido1"
                android:text="@string/tvBienvenido2"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser"
                android:layout_width="@dimen/textinput_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/username"
                app:endIconMode="custom"
                android:layout_marginBottom="@dimen/user_margin_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Bienvenido2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="@dimen/textinput_width"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/llave"
                android:layout_marginTop="@dimen/margin_top_tilPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRecordarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recordar mis credenciales"
                app:layout_constraintTop_toBottomOf="@id/tilPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/loginbutton_width"
                android:layout_height="@dimen/loginbutton_height"
                android:layout_marginTop="@dimen/margin_top_loginbutton"
                app:layout_constraintTop_toBottomOf="@id/cbRecordarme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/loginbutton_text"
                android:backgroundTint="@color/azulmarino"
                />

            <TextView
                android:id="@+id/tvCrearcuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/azulmarino"
                android:text="@string/crear_cuenta"
                android:textSize="16sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>